--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,9 @@ datasource:
   username: root
   password: Ali123!@#
 
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+
 activemq:
   broker-url: tcp://localhost:61616
   user: admin
@@ -13,4 +16,4 @@ activemq:
     max-connections: 5
 
 server:
-  port: 80
+  port: 8080
