--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,8 @@
 datasource:
   driver-class-name: com.mysql.cj.jdbc.Driver
-  url: jdbc:mysql://rm-bp1k0ef85lmpf2821zo.mysql.rds.aliyuncs.com/cheliangweizhang?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
+  url: jdbc:mysql://rm-bp1k0ef85lmpf2821zo.mysql.rds.aliyuncs.com/clwz?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
   username: root
   password: Ali123!@#
-
-mybatis:
-  mapper-locations: classpath:mapper/*.xml
-
-activemq:
-  broker-url: tcp://localhost:61616
-  user: admin
-  password: admin
-  pool:
-    enabled: true
-    max-connections: 5
 
 server:
   port: 8080
